--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "multer": "^1.4.2",
     "passport": "0.4.1",
     "passport-local": "1.0.0",
+    "uuid": "^8.3.2",
     "winston": "3.3.3"
   },
   "devDependencies": {
@@ -61,6 +62,7 @@
     "@types/request": "2.48.5",
     "@types/request-promise": "4.1.47",
     "@types/supertest": "2.0.10",
+    "@types/uuid": "^8.3.0",
     "@types/winston": "2.4.4",
     "@typescript-eslint/eslint-plugin": "4.14.2",
     "@typescript-eslint/parser": "4.14.2",
