--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build-ts": "tsc",
-    "build": "npm run build-ts && npm run lint",
+    "build": "npm run build-ts",
     "debug": "npm run build && npm run watch-debug",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
     "serve-debug": "nodemon --inspect dist/server.js",
@@ -24,6 +24,7 @@
   "dependencies": {
     "@types/mongodb": "3.6.5",
     "async": "^3.2.0",
+    "aws-sdk": "^2.902.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "1.19.0",
     "compression": "1.7.4",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@types/async": "^3.2.6",
+    "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt-nodejs": "0.0.31",
     "@types/body-parser": "1.19.0",
     "@types/compression": "1.7.0",
