--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "chai": "^4.3.4",
     "compression": "1.7.4",
     "connect-mongo": "4.4.0",
+    "cors": "^2.8.5",
     "dotenv": "8.2.0",
     "errorhandler": "1.5.1",
     "express": "4.17.1",
@@ -38,6 +39,7 @@
     "lodash": "4.17.20",
     "lusca": "1.6.1",
     "mongoose": "5.11.15",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "passport": "0.4.1",
     "passport-local": "1.0.0",
@@ -52,6 +54,7 @@
     "@types/body-parser": "1.19.0",
     "@types/chai": "^4.2.18",
     "@types/compression": "1.7.0",
+    "@types/cors": "^2.8.10",
     "@types/errorhandler": "1.5.0",
     "@types/eslint": "7.2.6",
     "@types/express": "4.17.11",
@@ -60,6 +63,7 @@
     "@types/jest": "^26.0.23",
     "@types/lodash": "4.14.168",
     "@types/lusca": "1.6.2",
+    "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.5",
     "@types/node": "14.14.25",
     "@types/passport": "1.0.5",
