--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "chai": "^4.3.4",
     "compression": "1.7.4",
     "connect-mongo": "4.4.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "8.2.0",
     "errorhandler": "1.5.1",
@@ -54,6 +55,7 @@
     "@types/body-parser": "1.19.0",
     "@types/chai": "^4.2.18",
     "@types/compression": "1.7.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
     "@types/errorhandler": "1.5.0",
     "@types/eslint": "7.2.6",
