--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "material-ui-dropzone": "^3.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-medium-image-zoom": "^3.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-medium-image-zoom": "^3.0.0",
     "@types/react-router-dom": "^5.1.7"
   }
 }
