--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "express": "4.17.1",
     "express-session": "1.17.1",
     "express-validator": "6.9.2",
+    "jimp": "^0.16.1",
     "lodash": "4.17.20",
     "lusca": "1.6.1",
     "mongoose": "5.11.15",
@@ -63,6 +64,7 @@
     "@types/express-session": "1.17.3",
     "@types/express-validator": "^3.0.0",
     "@types/jest": "^26.0.23",
+    "@types/jimp": "^0.2.28",
     "@types/lodash": "4.14.168",
     "@types/lusca": "1.6.2",
     "@types/morgan": "^1.9.2",
