--- a/.github/workflows/master_jc-shopify-backend.yml
+++ b/.github/workflows/master_jc-shopify-backend.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
+          # npm run test --if-present
         working-directory: ${{env.working-directory}}
 
       - name: Run Azure webapp deploy action using publish profile credentials
