--- a/server/.env.example
+++ b/server/.env.example
@@ -5,8 +5,8 @@ MONGODB_URI="connection uri for mongodb in production"
 # AWS information
 AWS_ACCESS_KEY_ID=''
 AWS_SECRET_KEY=''
-PUBLIC_S3_BUCKET_NAME='name of the bucket you created'
-PRIVATE_S3_BUCKET_NAME='jc-shopify-backend-challenge-private'
+PUBLIC_S3_BUCKET_NAME='name of the public bucket you created'
+PRIVATE_S3_BUCKET_NAME='name of the private bucket you created'
 
 # Random seed for session generation. You may keep the current value
 SESSION_SECRET=ashdfjhasdlkjfhalksdjhflak
