--- a/server/package.json
+++ b/server/package.json
@@ -8,12 +8,12 @@
   },
   "scripts": {
     "build-ts": "tsc",
-    "build": "npm run build-ts && cp ./package.json ./dist/ && cp -r ./src/public/ ./dist/",
+    "build": "npm run build-ts && cp -r ./src/public/ ./dist/ && cp -r ./node_modules/ ./dist/",
     "debug": "npm run build && npm run watch-debug",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
     "serve-debug": "nodemon --inspect dist/server.js",
     "serve": "node dist/server.js",
-    "start": "npm i && node ./server.js",
+    "start": "node ./server.js",
     "test": "jest --forceExit --coverage --verbose",
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"Sass,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve-debug\"",
     "watch-node": "nodemon dist/server.js",
