--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build-ts": "tsc",
-    "build": "npm run build-ts && cp -r ./src/public/ ./dist/ && cp -r ./node_modules/ ./dist/",
+    "build": "npm run build-ts && cp -r ./src/public/ ./dist/",
     "debug": "npm run build && npm run watch-debug",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
     "serve-debug": "nodemon --inspect dist/server.js",
