--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
     "build-ts": "tsc",
     "build": "npm run build-ts && cp -r ./src/public/ ./dist/",
     "debug": "npm run build && npm run watch-debug",
+    "deploy": "git add . && git commit -m Heroku && git push heroku master",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
+    "postinstall": "tsc && mv -i -v ./src/public dist/ && rm -v -rf src",
     "serve-debug": "nodemon --inspect dist/server.js",
     "serve": "node ./dist/server.js",
     "start": "node ./dist/server.js",
@@ -45,6 +47,7 @@
     "multer": "^1.4.2",
     "passport": "0.4.1",
     "passport-local": "1.0.0",
+    "superagent": "^6.1.0",
     "uuid": "^8.3.2",
     "winston": "3.3.3"
   },
@@ -74,6 +77,7 @@
     "@types/passport-local": "1.0.33",
     "@types/request": "2.48.5",
     "@types/request-promise": "4.1.47",
+    "@types/superagent": "^4.1.11",
     "@types/supertest": "2.0.10",
     "@types/uuid": "^8.3.0",
     "@types/winston": "2.4.4",
@@ -86,5 +90,8 @@
     "ts-jest": "26.5.0",
     "ts-node": "9.1.1",
     "typescript": "4.1.3"
+  },
+  "engines": {
+    "node": "12.18.0"
   }
 }
